Fix layout issue in Module Permission tab when editing a module

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -7358,9 +7358,6 @@ html[dir=rtl] .quick-icons .nav-list [class*=" icon-"] {
 .nav-filters hr {
 	margin: 5px 0;
 }
-.view-module .tab-content {
-	overflow: visible;
-}
 #assignment.tab-pane {
 	min-height: 500px;
 }
